--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/large.css" media="(min-width: 992px) and (max-width: 1199px)" type="text/css">
         <link rel="stylesheet" href="css/extra-large.css" media="(min-width: 1200px)" type="text/css">
 
+        <meta name = "viewport" content = "width=device-width, initial-scale=1">
         <meta charset="utf-8">
 
         <title>Kill The Flies</title>
