--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
     <head>
-
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
         <!--Css links-->
@@ -15,33 +14,38 @@
         <link rel="stylesheet" href="css/large.css" media="(min-width: 992px) and (max-width: 1199px)" type="text/css">
         <link rel="stylesheet" href="css/extra-large.css" media="(min-width: 1200px)" type="text/css">
 
-        <meta name = "viewport" content = "width=device-width, initial-scale=1">
-        <meta charset="utf-8">
+        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
 
         <title>Kill The Flies</title>
-
     </head>
     <body>
         <section id="screen">
             <div id="menu">
                 <section id="logo-container">
-                    <img class="fly flipped top" src="img/fly-flipped.png" alt="Fly">
                     <img class="logo-img" src="img/logo.png" alt="Logo of the game: kill the flies">
-                    <img class="fly not-flipped bottom" src="img/fly.png" alt="Other fly">
                 </section>
                 <section id="options">
-                    <select id="dificulty-selector" name="difficulty">
+                    <select id="difficulty-selector" name="difficulty">
                         <option value="" disabled>Select the difficulty</option>
                         <option value="1">Child</option>
-                        <option value="2">Normal guy</option>
-                        <option value="3">The flash</option>
-                        <option value="4">Clint eastwood</option>
+                        <option value="3">Normal guy</option>
+                        <option value="6">The flash</option>
+                        <option value="9">Clint eastwood</option>
                     </select>
-                    <a class="button" href="">Jogar</a>
+                    <a class="button" onclick="load_game_page()">Play</a>
                 </section>
             </div>
-
         </section>
+
+    <!--Js links-->
+    <script>
+        //Load game page
+        function load_game_page() {
+            options = document.getElementById('difficulty-selector');
+            window.location.assign(`pages/in-game.html?difficulty=${options.value}`);
+        }
+    </script>
     </body>
 
 </html>
